Production/Production/src/objects/Collection_Step_Action__c.object
<CustomObject>
    <fields>
        <fullName>Collection_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Step</label>
        <referenceTo>Collection_Step__c</referenceTo>
        <relationshipLabel>Collection Step Actions</relationshipLabel>
        <relationshipName>Collection_Step_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Action_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Action Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Step_Id__c</fullName>
        <label>External Step Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>GoTo Step</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Collection Step Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ig00000004Z3VEAU_00Ng0000000dmH3EAI</fullName>
        <active>true</active>
        <field>Collection_Step_Criteria__c.Action__c</field>
        <filterItems>
            <field>Collection_Step_Action__c.Collection_Step__c</field>
            <operation>equals</operation>
            <valueField>$Source.Collection_Step__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Collection Step Criteria_Action</name>
        <sourceObject>Collection_Step_Criteria__c</sourceObject>
    </namedFilters>
    <pluralLabel>Collection Step Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>